<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nwpu_account"
            android:textColor="@color/blue_900" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:text="@string/account_reminder" />

            <EditText
                android:id="@+id/account_eidt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints="nwpu_account"
                android:gravity="center"
                android:hint="@string/account_hint"
                android:inputType="number|textEmailAddress"
                android:textColorHint="#546E7A" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:text="@string/password_reminder" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints="nwpu_password"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColorHint="#546E7A" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/save_text" />

            <Button
                android:id="@+id/test_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/test_text"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reference"
            android:textColor="@color/blue_900" />

        <TextView
            android:id="@+id/use_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/use_policy"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/autofill_v1_0"/>
    </LinearLayout>

</ScrollView>