<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:src="@drawable/nwpu"
        android:contentDescription="@string/npwu_icon" />

    <ToggleButton
        android:id="@+id/toggle_btn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/btn_plan"
        android:textColor="#424242"
        android:textOff="@string/fill_on"
        android:textOn="@string/fill_off" />

</LinearLayout>